// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "user/api/pbentity";

import "google/protobuf/timestamp.proto";

message Hall {
    int32                     Id        = 1; //   
    int32                     LibId     = 2; //   
    int32                     FloorId   = 3; //   
    string                    HallName  = 4; //   
    google.protobuf.Timestamp CreatedAt = 5; //   
    google.protobuf.Timestamp UpdatedAt = 6; //   
}